--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </span>
                 <span class="navbar-caption-wrap">
                     <a class="navbar-caption text-white display-4" href="https://mobirise.com">
-                        MOBIRISE
+                        Onestar
                     </a>
                 </span>
             </div>
@@ -55,11 +55,11 @@
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
-                        Services
+                        Home
                     </a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
-                        Services
+                        Shop
                     </a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
